# gether-fit

./: .gitignore  README.md
android-app/: build.gradle
android-app/app/: build.gradle
android-app/app/objectbox-models/: default.json
android-app/app/release/: output-metadata.json
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/res/drawable/: ic_baseline_format_list_numbered_24.xml  ic_baseline_login_24.xml  ic_baseline_menu_book_24.xml  ic_baseline_trending_up_24.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_undraw_healthy_habit_bh5w.xml  ic_undraw_personal_trainer_ote3.xml  nav_button_circle.xml  nav_button_highlighting.xml  rounded_background_primary.xml  rounded_button_error.xml
android-app/app/src/main/res/layout/: activity_edit_exercise.xml  activity_edit_space.xml  activity_exercise.xml  activity_perform_exercise.xml  activity_settings.xml  activity_workout.xml  bottom_sheet_image.xml  change_log_item.xml  description_item.xml  dialog_confirm.xml  exercise_item.xml  fragment_event.xml  fragment_home.xml  fragment_overview.xml  fragment_recipes.xml  (+5 more)
android-app/gradle/wrapper/: gradle-wrapper.properties
app/: settings.gradle
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
ios-app/: .gitignore  Podfile
ios-app/GetherFit/: ContentView.swift  GetherFitApp.swift  Info.plist
ios-app/GetherFit.xcodeproj/: project.pbxproj
ios-app/GetherFit.xcworkspace/: contents.xcworkspacedata
server/: Cargo.toml  Rocket.toml
server/src/: login.rs  main.rs  session.rs
server/static/: onetap.html
(+124 files in other folders)
