[package]
name = "server"
version = "0.1.0"
authors = ["Philipp Scheede <p.scheede@gmx.de>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["diesel_sqlite_pool"] }
rand = "0.8.3"
serde = "1.0.123"
serde_json = "1.0.61"
jsonwebtoken = "7.2.0"
sha2 = "0.9.3"
reqwest = "0.11.0"
